kubernetes/services/pgadmin4.yml
---
apiVersion: v1
kind: Service
metadata:
  name: pgadmin4
  namespace: default
spec:
  ports:
    - protocol: TCP
      name: web
      port: 80
  selector:
    app: pgadmin4

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin4
  namespace: default
spec:
  tls:
    - hosts:
        - pgadmin4.${DOMAIN_NAME}
      secretName: wilcard-main-domain-tls
  rules:
    - host: pgadmin4.${DOMAIN_NAME}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pgadmin4
                port:
                  name: web

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin4
  namespace: default
  labels:
    app: pgadmin4
  annotations:
    keel.sh/policy: minor
    keel.sh/trigger: poll
    keel.sh/pollSchedule: "@weekly"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgadmin4
  template:
    metadata:
      labels:
        app: pgadmin4
    spec:
      containers:
        - name: app
          image: dpage/pgadmin4
          resources:
            requests:
              memory: 128Mi
              cpu: 125m
            limits:
              memory: 256Mi
              cpu: 250m
          ports:
            - name: web
              containerPort: 80
